--- a/composer.json
+++ b/composer.json
@@ -27,7 +27,8 @@
         "guzzlehttp/guzzle": "^7.4",
         "http-interop/http-factory-guzzle": "^1.2",
         "orchestra/testbench": "^6.0|^7.0",
-        "phpunit/phpunit": "^9.5"
+        "phpunit/phpunit": "^9.5",
+        "brick/varexporter": "^0.3.5"
     },
     "autoload": {
         "psr-4": {
@@ -51,5 +52,8 @@
                 "Dwarf\\MeiliTools\\MeiliToolsServiceProvider"
             ]
         }
+    },
+    "suggest": {
+        "brick/varexporter": "Improves readability of console output for index details"
     }
 }
