--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -14,8 +14,10 @@ jobs:
         include:
           - version: prefer-stable
             meilisearch: latest
+            meilicmd: meilisearch
           - version: prefer-lowest
             meilisearch: v0.26.0
+            meilicmd: ./meilisearch
         exclude:
           - php: 7.4
             testbench: 7.0
@@ -42,11 +44,12 @@ jobs:
 
       - name: Install dependencies
         run: |
+          composer remove --dev friendsofphp/php-cs-fixer --no-update --no-interaction
           composer require "orchestra/testbench:^${{ matrix.testbench }}" --no-interaction --no-update
           composer update --${{ matrix.version }} --prefer-dist --no-interaction
 
       - name: Meilisearch setup with Docker
-        run: docker run -d -p 7700:7700 getmeili/meilisearch:${{ matrix.meilisearch }} meilisearch --master-key=masterKey --no-analytics
+        run: docker run -d -p 7700:7700 getmeili/meilisearch:${{ matrix.meilisearch }} ${{ matrix.meilicmd }} --master-key=masterKey --no-analytics
 
       - name: Setup Problem Matches
         run: |
