--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -11,7 +11,6 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        os: [ubuntu-latest]
         php: [8.1, 8.0, 7.4]
         testbench: [7.0, 6.23]
         version: [prefer-stable, prefer-lowest]
@@ -24,7 +23,7 @@ jobs:
           - php: 7.4
             testbench: 7.0
 
-    runs-on: ${{ matrix.os }}
+    runs-on: ubuntu-latest
 
     name: P${{ matrix.php }} - T${{ matrix.testbench }} - ${{ matrix.version }}
 
