Replaced PHP CS Fixer with Laravel Pint

--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -34,6 +34,9 @@ jobs:
     steps:
       - name: Checkout code
         uses: actions/checkout@v3
+        with:
+          # Make sure the actual branch is checked out when running on pull requests.
+          ref: ${{ github.head_ref }}
 
       - name: Install SQLite 3
         run: |
@@ -49,7 +52,6 @@ jobs:
 
       - name: Install dependencies
         run: |
-          composer remove --dev friendsofphp/php-cs-fixer --no-update --no-interaction
           composer require "orchestra/testbench:^${{ matrix.testbench }}" --no-interaction --no-update
           composer update --${{ matrix.version }} --prefer-dist --no-interaction
 
