--- a/composer.json
+++ b/composer.json
@@ -43,9 +43,7 @@
     },
     "scripts": {
         "test": "phpunit",
-        "test:coverage": "phpdbg -qrr vendor/bin/phpunit --coverage-html tests/_reports",
-        "lint": "php-cs-fixer fix --verbose --using-cache=no --dry-run --diff",
-        "lint:fix": "php-cs-fixer fix --verbose --using-cache=no --diff"
+        "test:coverage": "phpdbg -qrr vendor/bin/phpunit --coverage-html tests/_reports"
     },
     "extra": {
         "laravel": {
