--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -14,7 +14,9 @@ on:
       - '**.php'
 
 jobs:
-  php-cs-fixer:
+  laravel-pint:
+    name: PHP Linting (Pint)
+
     runs-on: ubuntu-latest
 
     steps:
