--- a/composer.json
+++ b/composer.json
@@ -28,6 +28,8 @@
         "illuminate/support": "^8.69|^9.0",
         "laravel/scout": "^9.0",
         "orchestra/testbench": "^6.5|^7.0",
+        "pestphp/pest": "^1.22",
+        "pestphp/pest-plugin-laravel": "^1.3",
         "php-http/discovery": "^1.12",
         "phpunit/phpunit": "^9.4"
     },
@@ -42,8 +44,8 @@
         }
     },
     "scripts": {
-        "test": "phpunit",
-        "test:coverage": "phpdbg -qrr vendor/bin/phpunit --coverage-html tests/_reports"
+        "test": "vendor/bin/pest",
+        "test:coverage": "phpdbg -qrr vendor/bin/pest --coverage-html tests/_reports"
     },
     "extra": {
         "laravel": {
