Updated workflow to check for composer changes

--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -6,11 +6,13 @@ on:
     branches:
       - main
     paths:
+      - 'composer.json'
       - '**.php'
   pull_request:
     branches:
       - main
     paths:
+      - 'composer.json'
       - '**.php'
   schedule:
     - cron: '0 1 * * 1' # Run at 01:00 on Mondays.
