More workflow updates

--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -6,11 +6,13 @@ on:
     branches:
       - main
     paths:
+      - '**.json'
       - '**.php'
   pull_request:
     branches:
       - main
     paths:
+      - '**.json'
       - '**.php'
 
 jobs:
