--- a/composer.json
+++ b/composer.json
@@ -19,7 +19,7 @@
     "require": {
         "php": "^7.4|^8.0",
         "illuminate/validation": "^8.0|^9.0",
-        "meilisearch/meilisearch-php": ">=0.24.0"
+        "meilisearch/meilisearch-php": ">=0.24.0 <=0.26.0"
     },
     "require-dev": {
         "brick/varexporter": "^0.3.5",
