--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -24,8 +24,8 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        php: [8.1, 8.0, 7.4]
-        testbench: [7.0, 6.23]
+        php: [8.2, 8.1, 8.0, 7.4]
+        testbench: [8.0, 7.0, 6.23]
         version: [prefer-stable, prefer-lowest]
         include:
           - version: prefer-stable
@@ -35,6 +35,10 @@ jobs:
         exclude:
           - php: 7.4
             testbench: 7.0
+          - php: 7.4
+            testbench: 8.0
+          - php: 8.0
+            testbench: 8.0
 
     runs-on: ubuntu-latest
 
