--- a/composer.json
+++ b/composer.json
@@ -18,16 +18,16 @@
     ],
     "require": {
         "php": "^7.4|^8.0",
-        "illuminate/validation": "^8.0|^9.0",
+        "illuminate/validation": "^8.0|^9.0|^10.0",
         "meilisearch/meilisearch-php": ">=0.24.0 <=0.26.0"
     },
     "require-dev": {
         "brick/varexporter": "^0.3.5",
         "guzzlehttp/guzzle": "^7.4",
         "http-interop/http-factory-guzzle": "^1.2",
-        "illuminate/support": "^8.69|^9.0",
+        "illuminate/support": "^8.69|^9.0|^10.0",
         "laravel/scout": "^9.0",
-        "orchestra/testbench": "^6.5|^7.0",
+        "orchestra/testbench": "^6.5|^7.0|^8.0",
         "php-http/discovery": "^1.12",
         "phpunit/phpunit": "^9.4"
     },
