--- a/composer.json
+++ b/composer.json
@@ -27,7 +27,8 @@
         "http-interop/http-factory-guzzle": "^1.2",
         "illuminate/support": "^8.69|^9.0|^10.0",
         "laravel/scout": "^9.0",
-        "orchestra/testbench": "^6.5|^7.0|^8.0",
+        "nesbot/carbon": "^2.63",
+        "orchestra/testbench": "^6.26|^7.0|^8.0",
         "php-http/discovery": "^1.12",
         "phpunit/phpunit": "^9.4"
     },
