feat(Composer): Update versions and workflow

--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,7 @@
 /vendor
 /tests/_reports
-/.idea
 /composer.lock
-/.phpunit.result.cache
-/.phpunit.result.log
+/.idea
+/.phpunit.result.*
+/.pint.json
 .DS_*
