--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -6,59 +6,48 @@ on:
     branches:
       - main
     paths:
-      - '**.json'
-      - '**.php'
-      - '**.yml'
+      - "**.json"
+      - "**.php"
+      - "**.yml"
   pull_request:
     branches:
       - main
     paths:
-      - '**.json'
-      - '**.php'
-      - '**.yml'
+      - "**.json"
+      - "**.php"
+      - "**.yml"
   schedule:
-    - cron: '0 1 * * 1' # Run at 01:00 on Mondays.
+    - cron: "0 1 * * 1" # Run at 01:00 on Mondays.
 
 jobs:
   tests:
     strategy:
       fail-fast: false
       matrix:
-        php: [8.2, 8.1, 8.0, 7.4]
-        testbench: [8.0, 7.0, 6.23]
+        php: [8.4, 8.3, 8.2]
+        testbench: [10.0, 9.0, 8.0]
         version: [prefer-stable, prefer-lowest]
         include:
           - version: prefer-stable
             meilisearch: latest
           - version: prefer-lowest
-            meilisearch: v0.28.0
-        exclude:
-          - php: 7.4
-            testbench: 7.0
-          - php: 7.4
-            testbench: 8.0
-          - php: 8.0
-            testbench: 8.0
+            meilisearch: v1.0.0
 
     runs-on: ubuntu-latest
 
     name: P${{ matrix.php }} - T${{ matrix.testbench }} - ${{ matrix.version }}
 
+    container:
+      image: kirschbaumdevelopment/laravel-test-runner:${{ matrix.php }}
+      options: "--user=root"
+
     steps:
       - name: Checkout code
-        uses: actions/checkout@v3
-
-      - name: Install SQLite 3
-        run: |
-          sudo apt-get update
-          sudo apt-get install sqlite3
-
-      - name: Setup PHP
-        uses: shivammathur/setup-php@v2
+        uses: actions/checkout@v4
         with:
-          php-version: ${{ matrix.php }}
-          extensions: curl, mbstring, zip, pcntl, pdo, sqlite, pdo_sqlite, iconv
-          coverage: none
+          # Make sure the actual branch is checked out when running on pull requests.
+          ref: ${{ github.head_ref }}
+          token: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Install dependencies
         run: |
@@ -67,11 +56,6 @@ jobs:
 
       - name: Meilisearch setup with Docker
         run: docker run -d -p 7700:7700 getmeili/meilisearch:${{ matrix.meilisearch }} meilisearch --master-key=masterKey --no-analytics
-
-      - name: Setup Problem Matches
-        run: |
-          echo "::add-matcher::${{ runner.tool_cache }}/php.json"
-          echo "::add-matcher::${{ runner.tool_cache }}/phpunit.json"
 
       - name: Execute tests
         run: vendor/bin/phpunit
