--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -41,6 +41,18 @@ jobs:
       image: kirschbaumdevelopment/laravel-test-runner:${{ matrix.php }}
       options: "--user=root"
 
+    services:
+      meilisearch:
+        image: getmeili/meilisearch:${{ matrix.meilisearch }}
+        ports:
+          - 7700:7700
+        options: >-
+          --health-cmd="curl --fail http://localhost:7700/health" --health-interval=10s
+          --health-timeout=5s --health-retries=3
+        env:
+          MEILI_MASTER_KEY: masterKey
+          MEILI_NO_ANALYTICS: "true"
+
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
@@ -53,9 +65,6 @@ jobs:
         run: |
           composer require "orchestra/testbench:^${{ matrix.testbench }}" --no-interaction --no-update
           composer update --${{ matrix.version }} --prefer-dist --no-interaction
-
-      - name: Meilisearch setup with Docker
-        run: docker run -d -p 7700:7700 getmeili/meilisearch:${{ matrix.meilisearch }} meilisearch --master-key=masterKey --no-analytics
 
       - name: Execute tests
         run: vendor/bin/phpunit
