--- a/composer.json
+++ b/composer.json
@@ -31,7 +31,7 @@
         "nesbot/carbon": "^2.63",
         "orchestra/testbench": "^8.0|^9.0|^10.0",
         "php-http/discovery": "^1.12",
-        "phpunit/phpunit": "^9.4"
+        "phpunit/phpunit": "^9.4|^10.0"
     },
     "config": {
         "allow-plugins": {
