feat(Workflow): Updates

--- a/composer.json
+++ b/composer.json
@@ -49,6 +49,7 @@
         }
     },
     "scripts": {
+        "pint": "pint --parallel",
         "test": "phpunit",
         "test:coverage": "phpdbg -qrr vendor/bin/phpunit --coverage-html tests/_reports"
     },
