--- a/composer.json
+++ b/composer.json
@@ -28,7 +28,7 @@
         "illuminate/support": "^10.0|^11.0|^12.0",
         "laravel/pint": "^1.24",
         "laravel/scout": "^9.0|^10.0",
-        "nesbot/carbon": "^2.63",
+        "nesbot/carbon": "^2.63|^3.0",
         "orchestra/testbench": "^8.0|^9.0|^10.0",
         "php-http/discovery": "^1.12",
         "phpunit/phpunit": "^9.4|^10.0"
