--- a/composer.json
+++ b/composer.json
@@ -25,13 +25,13 @@
         "brick/varexporter": "^0.3.5",
         "guzzlehttp/guzzle": "^7.4",
         "http-interop/http-factory-guzzle": "^1.2",
-        "illuminate/support": "^10.0|^11.0|^12.0",
+        "illuminate/support": "^10.17|^11.0|^12.0",
         "laravel/pint": "^1.24",
         "laravel/scout": "^9.0|^10.0",
         "nesbot/carbon": "^2.63|^3.0",
         "orchestra/testbench": "^8.0|^9.0|^10.0",
         "php-http/discovery": "^1.12",
-        "phpunit/phpunit": "^9.4|^10.0"
+        "phpunit/phpunit": "^9.4|^10.0|^11.0"
     },
     "config": {
         "allow-plugins": {
