--- a/composer.json
+++ b/composer.json
@@ -22,7 +22,7 @@
         "meilisearch/meilisearch-php": "^1.0.0"
     },
     "require-dev": {
-        "brick/varexporter": "^0.3.5",
+        "brick/varexporter": "^0.3.5|^0.4.0|^0.5.0|^0.6.0",
         "guzzlehttp/guzzle": "^7.4",
         "http-interop/http-factory-guzzle": "^1.2",
         "illuminate/support": "^10.17|^11.0|^12.0",
@@ -31,7 +31,7 @@
         "nesbot/carbon": "^2.63|^3.0",
         "orchestra/testbench": "^8.0|^9.0|^10.0",
         "php-http/discovery": "^1.12",
-        "phpunit/phpunit": "^9.4|^10.0|^11.0"
+        "phpunit/phpunit": "^10.0|^11.0"
     },
     "config": {
         "allow-plugins": {
