--- a/composer.json
+++ b/composer.json
@@ -31,7 +31,7 @@
         "nesbot/carbon": "^2.63|^3.0",
         "orchestra/testbench": "^8.0|^9.0|^10.0",
         "php-http/discovery": "^1.12",
-        "phpunit/phpunit": "^10.0|^11.0"
+        "pestphp/pest": "^2.2"
     },
     "config": {
         "allow-plugins": {
